
mcdma_v1_3:
In mcdma examples remove snoop enable and dependency on HPC_DESIGN macro.
In driver tcl enable CCI only for EL1 non-secure state.
Create channel submit variant to program additional BD fields.
Add HasRxLength field in config and channel structure.

xilmbox_v1_0:
Initial Release.
Updated mld supported peripheral option with A72 and PMC.

zdma_v1_7:
Add support for versal IP name.

cpu_cortexr5_v1_5:
Create a new version of cortex r5 CPU driver to add support for hard
float.

Changes for 2018.3.1
===============================
rfdc_v5_1:
Now get maximum FS from IP.
Determinig ADC Type now on a per-tile basis.
The wrong fabric rate was being used for a 2GSPS ADC at a
decimation rate of 8.The wrong fabric rate was being used
for a 2GSPS ADC at a decimation rate of 8.
The paramater "DataType" is now "MixerInputDataType".
Added APIs to set and get IM3 Dither.

Changes for 2018.3
===============================
dp12_v7_0:
Display port 2017.4 core drivers are renamed.

dp12rxss_v4_2:
Display port 2017.4 receiver subsystem drivers are renamed.
Fixed application compilation errors.

dp12txss_v5_1:
Display port 2017.4 transmitter subsytem drivers are renamed
Fixed application compilation errors.

dp14_v7_1:
Display port 2018.1 core drivers are renamed.
Updated the channel equivalization sequence.
Updated to pass the complaince tests.

dp14rxss_v5_1:
Display port 2018.1 receiver subsystem drivers are renamed.
Removed the dp12 applications.
Added support to new application examples.

dp14txss_v6_1:
Display port 2018.1 transmitter subsystem drivers are renamed.
Removed the dp12 applications.
Addeed support to new application examples

v_scenechange_v1_0:
Initial release for SceneChange IP.

v_mix_v5_0:
Modified existing Stop API for flush feature.

v_frmbuf_wr_v4_0:
Added new API, This API is used to wait for IP to enter into idle state.
Modified existing Stop API to support Flushing feature.

v_frmbuf_rd_v4_0: